# evm-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: domain.rs  evm.rs  instructions.rs  interpreter.rs  lib.rs  main.rs  stack.rs
src/domain/: bytecode.rs  constants.rs  state.rs
src/instructions/: arithmetic.rs  bitwise.rs  comparison.rs  logical.rs  stack.rs
src/interpreter/: opcodes.rs  operation.rs  stack.rs
