[package]
name = "evm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
opt-level = 3
panic = "abort"
codegen-units = 1

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
ruint = { version = "1.12.3", default-features = false, features = ["alloc"] }
ruint-macro = { version = "1", default-features = false }
hashbrown = "0.14"
bytes = "1.6.1"
hex = "0.4.3"
